app-deploy/canary/prod-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prod
  labels:
    app: prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: prod
  template:
    metadata:
      labels:
        app: prod
    spec:
      containers:
      - name: prod-demo
        image: reg.xinxianghf.cloud/library/rollouts-demo:blue
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: prod-svc
  labels:
    app: prod
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: prod
  type: ClusterIP
