app-deploy/canary/prod-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prod-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: canary.xinxianghf.cloud 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-svc
            port:
              number: 80
